caputils-0.7.11
---------------

	* fix: [capmerge] fix bug where it only sorted the first 10k packets.
	* fix: [capfilter] make capfilter actually work.
	* fix: [capinfo] removing extra newline after marker info.
	* fix: [filter] update documentation.
	* fix: [capshow] retain the packet number when filtering.
	* fix: [utils] Ensure IFHWADDRLEN is defined.
	* add: [capinfo] Exit with code 1 if any error occurs.

caputils-0.7.10
---------------

	* add: support for automatically creating and unlinking when reading.
	* add: timepico_now function to get current time as timepico.
	* add: stream_num_addresses to get number of addresses associated with
	       a stream.
	* add: [capshow] support for ARP.
	* add: [capshow] support for showing timestamps relative to first
	       packet. Enabled by default.
	* fix: [gcc 3.3] using alias instead of weakref for be64toh workaround.
	* add: function to open stream from FILE pointer.
	* add: capmerge: a tool to merge cap-files.
	* add: stream_peek to look at packet but don't pop it.
	* fix: stream_copy now truncates packets where caplen is greater than
	       wire len, e.g. when capturing using "novalen slen=1500" on a DAG
	       card. The truncated part is only zeroes.
	* fix: [capinfo] pad duration seconds with zero when single digit.
	* fix: stream_read timeout works again.

caputils-0.7.9
--------------

	* fix: [capinfo] handle when duration is less than one second.
	* add: [capinfo] show mampids
	* add: --filter-mode argument.
	* fix: capinfo now properly resets the packet counters when using
	       multiple files.
	* change: stream_read now drops invalid measurement frames.
	* fix: capdump properly handles SIGTERM.
	* change: show localtime instead of UTC (but it show timezone as well)
	* change: changed marker report to match progress report.

caputils-0.7.8
--------------

	* fix: pfring_recv no longer blocks when reading additional frames while